--- a/src/components/components/SideBar/SideBar.css
+++ b/src/components/components/SideBar/SideBar.css
@@ -1,8 +1,8 @@
 .side-bar {
     margin: 0;
-    padding: 110px 90px 90px;
+    padding: 90px 80px 120px;
     box-sizing: border-box;
-    width: 520px;
+    width: 500px;
     height: 100vh;
     position: fixed;
     right: 0;
@@ -25,7 +25,7 @@
 
 @media screen and (max-width: 767px) {
     .side-bar {
-        padding: 144px 10px 46px;
+        padding: 70px 10px 90px;
         width: 320px;
     }
 }
